syntax = "proto3";
package custom.v1;

import "google/protobuf/timestamp.proto";

message CallsWithInputs {
  repeated TakeAskExt take_asks = 1;
  repeated TakeAskSingleExt take_asks_single = 2;
  repeated TakeBidExt take_bids = 3;
  repeated TakeBidSingleExt take_bids_single = 4;
}

message TakeAskExt {
  source_TakeAskCall call = 1;
  TakeAsk inputs = 2;
}

message TakeAskSingleExt {
  source_TakeAskSingleCall call = 1;
  TakeAskSingle inputs = 2;
}

message TakeBidExt {
  source_TakeBidCall call = 1;
  TakeBid inputs = 2;
}

message TakeBidSingleExt {
  source_TakeBidSingleCall call = 1;
  TakeBidSingle inputs = 2;
}

message Trade {
  string tx_hash = 1;
  google.protobuf.Timestamp timestamp = 2;
  bytes total_wei_value = 3;
  Transfer721 erc_721_transfer = 4;
  TradeType trade_type = 5;
}

message Trades {
  repeated Trade trades = 1;
}

message Transfer721 {
  string from = 1;
  string to = 2;
  int64 id = 3;
  int64 amount = 4;
  string collection = 5;
  AssetType asset_type = 6;
}

enum TradeType {
  TAKEASK = 0;
  TAKEASKSINGLE = 1;
  TAKEASKSINGLEPOOL = 2;
  TAKEBID = 3;
  TAKEBIDSINGLE = 4;
  TAKEBIDSINGLEPOOL = 5;
}
/*
       #[derive(Clone, PartialEq, Message)]
   pub struct Transfer721 {
   #[prost(message, optional, tag="1")]
       pub from: Option<Address>,
       #[prost(message, optional, tag="2")]
       pub to: Option<Address>,
       #[prost(int64, tag="3")]
       pub id: i64,
       #[prost(int64, tag="4")]
       pub amount: i64,
       #[prost(message, optional, tag="5")]
       pub collection: Option<Address>,
       #[prost(enumeration="AssetType", tag="6")]
       pub asset_type: i32,
       }

   #[derive(Clone, PartialEq, Message)]
       pub struct TransferERC20 {
   #[prost(message, optional, tag="1")]
       pub from: Option<Address>,
       #[prost(message, optional, tag="2")]
       pub to: Option<Address>,
       #[prost(int64, tag="3")]
       pub amount: i64,
       #[prost(message, tag="4")]
       pub token: Option<Address>,
       #[prost(string, tag="5")]
       pub token_name: String,
       }

*/

message Events {
  repeated proxy_AdminChanged1 proxy_admin_changed_1s = 1;
  repeated proxy_AdminChanged2 proxy_admin_changed_2s = 2;
  repeated proxy_BeaconUpgraded1 proxy_beacon_upgraded_1s = 3;
  repeated proxy_BeaconUpgraded2 proxy_beacon_upgraded_2s = 4;
  repeated proxy_CancelTrade proxy_cancel_trades = 5;
  repeated proxy_Execution proxy_executions = 6;
  repeated proxy_Execution721MakerFeePacked proxy_execution721_maker_fee_packeds = 7;
  repeated proxy_Execution721Packed proxy_execution721_packeds = 8;
  repeated proxy_Execution721TakerFeePacked proxy_execution721_taker_fee_packeds = 9;
  repeated proxy_Initialized proxy_initializeds = 10;
  repeated proxy_NewBlockRange proxy_new_block_ranges = 11;
  repeated proxy_NewGovernor proxy_new_governors = 12;
  repeated proxy_NewProtocolFee proxy_new_protocol_fees = 13;
  repeated proxy_NonceIncremented proxy_nonce_incrementeds = 14;
  repeated proxy_OwnershipTransferStarted proxy_ownership_transfer_starteds = 15;
  repeated proxy_OwnershipTransferred proxy_ownership_transferreds = 16;
  repeated proxy_SetOracle proxy_set_oracles = 17;
  repeated proxy_Upgraded1 proxy_upgraded_1s = 18;
  repeated proxy_Upgraded2 proxy_upgraded_2s = 19;
  repeated source_AdminChanged source_admin_changeds = 20;
  repeated source_BeaconUpgraded source_beacon_upgradeds = 21;
  repeated source_CancelTrade source_cancel_trades = 22;
  repeated source_Execution source_executions = 23;
  repeated source_Execution721MakerFeePacked source_execution721_maker_fee_packeds = 24;
  repeated source_Execution721Packed source_execution721_packeds = 25;
  repeated source_Execution721TakerFeePacked source_execution721_taker_fee_packeds = 26;
  repeated source_Initialized source_initializeds = 27;
  repeated source_NewBlockRange source_new_block_ranges = 28;
  repeated source_NewGovernor source_new_governors = 29;
  repeated source_NewProtocolFee source_new_protocol_fees = 30;
  repeated source_NonceIncremented source_nonce_incrementeds = 31;
  repeated source_OwnershipTransferStarted source_ownership_transfer_starteds = 32;
  repeated source_OwnershipTransferred source_ownership_transferreds = 33;
  repeated source_SetOracle source_set_oracles = 34;
  repeated source_Upgraded source_upgradeds = 35;
}

message Calls {
  repeated source_AcceptOwnershipCall source_call_accept_ownerships = 1;
  repeated source_CancelTradesCall source_call_cancel_trades = 2;
  repeated source_IncrementNonceCall source_call_increment_nonces = 3;
  repeated source_InitializeCall source_call_initializes = 4;
  repeated source_RenounceOwnershipCall source_call_renounce_ownerships = 5;
  repeated source_SetBlockRangeCall source_call_set_block_ranges = 6;
  repeated source_SetGovernorCall source_call_set_governors = 7;
  repeated source_SetOracleCall source_call_set_oracles = 8;
  repeated source_SetProtocolFeeCall source_call_set_protocol_fees = 9;
  repeated source_TakeAskCall source_call_take_asks = 10;
  repeated source_TakeAskPoolCall source_call_take_ask_pools = 11;
  repeated source_TakeAskSingleCall source_call_take_ask_singles = 12;
  repeated source_TakeAskSinglePoolCall source_call_take_ask_single_pools = 13;
  repeated source_TakeBidCall source_call_take_bids = 14;
  repeated source_TakeBidSingleCall source_call_take_bid_singles = 15;
  repeated source_TransferOwnershipCall source_call_transfer_ownerships = 16;
  repeated source_UpgradeToCall source_call_upgrade_tos = 17;
  repeated source_UpgradeToAndCallCall source_call_upgrade_to_and_calls = 18;
}

message proxy_AdminChanged1 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_admin = 5;
  bytes new_admin = 6;
}

message proxy_AdminChanged2 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_admin = 5;
  bytes new_admin = 6;
}

message proxy_BeaconUpgraded1 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes beacon = 5;
}

message proxy_BeaconUpgraded2 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes beacon = 5;
}

message proxy_CancelTrade {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  bytes hash = 6;
  string index = 7;
  string amount = 8;
}

message proxy_Execution {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string listing_index = 6;
  string price = 7;
  uint64 order_type = 8;
}

message proxy_Execution721MakerFeePacked {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
  string maker_fee_recipient_rate = 8;
}

message proxy_Execution721Packed {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
}

message proxy_Execution721TakerFeePacked {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
  string taker_fee_recipient_rate = 8;
}

message proxy_Initialized {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  uint64 version = 5;
}

message proxy_NewBlockRange {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  string block_range = 5;
}

message proxy_NewGovernor {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes governor = 5;
}

message proxy_NewProtocolFee {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes recipient = 5;
  uint64 rate = 6;
}

message proxy_NonceIncremented {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  string new_nonce = 6;
}

message proxy_OwnershipTransferStarted {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_owner = 5;
  bytes new_owner = 6;
}

message proxy_OwnershipTransferred {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_owner = 5;
  bytes new_owner = 6;
}

message proxy_SetOracle {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  bool approved = 6;
}

message proxy_Upgraded1 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes implementation = 5;
}

message proxy_Upgraded2 {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes implementation = 5;
}

message source_AdminChanged {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_admin = 5;
  bytes new_admin = 6;
}

message source_BeaconUpgraded {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes beacon = 5;
}

message source_CancelTrade {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  bytes hash = 6;
  string index = 7;
  string amount = 8;
}

message source_Execution {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string listing_index = 6;
  string price = 7;
  uint64 order_type = 8;
}

message source_Execution721MakerFeePacked {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
  string maker_fee_recipient_rate = 8;
}

message source_Execution721Packed {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
}

message source_Execution721TakerFeePacked {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes order_hash = 5;
  string token_id_listing_index_trader = 6;
  string collection_price_side = 7;
  string taker_fee_recipient_rate = 8;
}

message source_Initialized {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  uint64 version = 5;
}

message source_NewBlockRange {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  string block_range = 5;
}

message source_NewGovernor {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes governor = 5;
}

message source_NewProtocolFee {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes recipient = 5;
  uint64 rate = 6;
}

message source_NonceIncremented {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  string new_nonce = 6;
}

message source_OwnershipTransferStarted {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_owner = 5;
  bytes new_owner = 6;
}

message source_OwnershipTransferred {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes previous_owner = 5;
  bytes new_owner = 6;
}

message source_SetOracle {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes user = 5;
  bool approved = 6;
}

message source_Upgraded {
  string evt_tx_hash = 1;
  uint32 evt_index = 2;
  google.protobuf.Timestamp evt_block_time = 3;
  uint64 evt_block_number = 4;
  bytes implementation = 5;
}

message source_AcceptOwnershipCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
}

message source_CancelTradesCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
}

message source_IncrementNonceCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
}

message source_InitializeCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
}

message source_RenounceOwnershipCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
}

message source_SetBlockRangeCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  string u_block_range = 6;
}

message source_SetGovernorCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes u_governor = 6;
}

message source_SetOracleCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle = 6;
  bool approved = 7;
}

message source_SetProtocolFeeCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes recipient = 6;
  uint64 rate = 7;
}

message source_TakeAskCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
}

message source_TakeAskPoolCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
  string amount_to_withdraw = 7;
}

message source_TakeAskSingleCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
}

message source_TakeAskSinglePoolCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
  string amount_to_withdraw = 7;
}

message source_TakeBidCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
}

message source_TakeBidSingleCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes oracle_signature = 6;
}

message source_TransferOwnershipCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes new_owner = 6;
}

message source_UpgradeToCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes new_implementation = 6;
}

message source_UpgradeToAndCallCall {
  string call_tx_hash = 1;
  google.protobuf.Timestamp call_block_time = 2;
  uint64 call_block_number = 3;
  uint64 call_ordinal = 4;
  bool call_success = 5;
  bytes new_implementation = 6;
  bytes data = 7;
}

message Address {
  bytes address = 1;
}

message FeeRate {
  Address recipient = 1;
  uint64 rate = 2;
}

message Fees {
  FeeRate protocol_fee = 1;
  FeeRate taker_fee = 2;
}

message Transfer {
  Address trader = 1;
  int64 id = 2;
  int64 amount = 3;
  Address collection = 4;
  AssetType asset_type = 5;
}

message Order {
  Address trader = 1;
  Address collection = 2;
  bytes listings_root = 3;
  int64 number_of_listings = 4;
  int64 expiration_time = 5;
  AssetType asset_type = 6;
  FeeRate maker_fee = 7;
  int64 salt = 8;
}

message Exchange {
  int64 index = 1;
  repeated bytes proof = 2;
  Listing listing = 3;
  Taker taker = 4;
}

message Taker {
  bytes token_id = 1;
  int64 amount = 2;
}

message Listing {
  int64 index = 1;
  bytes token_id = 2;
  int64 amount = 3;
  bytes price = 4;
}

enum OrderType {
  ASK = 0;
  BID = 1;
}

enum AssetType {
  ERC721 = 0;
  ERC1155 = 1;
}
message TakeBidSingle {
  Order order = 1;
  Exchange exchange = 2;
  FeeRate taker_fee = 3;
  bytes signature = 4;
}

message TakeBid {
  repeated Order orders = 1;
  repeated Exchange exchanges = 2;
  FeeRate taker_fee = 3;
  bytes signatures = 4;
}

message TakeAskSingle {
  Order order = 1;
  Exchange exchange = 2;
  FeeRate taker_fee = 3;
  bytes signature = 4;
  Address token_recipient = 5;
}

message TakeAsk {
  repeated Order orders = 1;
  repeated Exchange exchanges = 2;
  FeeRate taker_fee = 3;
  bytes signatures = 4;
  Address token_recipient = 5;
}
